Fix for #2107 - In CCWeb->Browse, selecting a value from the third column does not refine the search.  In fact the code for browse was seriously broken.  It has all been fixed, and is easier to understand.  I also optimized the code, there is now (number_of_results)*2 fewer database calls for this screen - instead there are only 2 database calls for the entire list of results.  Therefore the Browse screen should be visibly faster.  The result ordering now takes into account the track number, the complete order is now: creator, album, track number, title.  The album name and track number have been added to the search results.  In DataEngine.php, I broke up the function _localGenSearch() into two functions: one for searching and one for fetching the column values (new function: _browseCategory()).  These two things are completely separate tasks and doing this separation makes the code much easier to understand.  Added lots of code documentation to htmlUI/var/ui_browse.class.php.

--- a/campcaster/src/modules/htmlUI/var/html/styles_livesupport.css
+++ b/campcaster/src/modules/htmlUI/var/html/styles_livesupport.css
@@ -370,7 +370,7 @@ table {
 
 table td {
     font-size: 12px;
-    padding: 0 6px 0 12px;
+    padding: 2px 6px 0px 6px;
     border-right: 1px solid #333;
     height: 19px;
     vertical-align: top;
